--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>NFC</title>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="./style.css">
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
     <script defer src="./index.js"></script>
   </head>
   <body>
@@ -13,61 +16,88 @@
       <div class="curved-shape"></div>
       <div class="curved-shape2"></div>
       <div class="form-box Login">
-        <img class="animation" src="./Photo/undraw_login_re_4vu2.svg" alt="" height="100">
+        <img
+          class="animation"
+          src="./Photo/undraw_login_re_4vu2.svg"
+          alt=""
+          height="100"
+        />
         <h2 class="animation">Login</h2>
         <form action="#">
           <div class="input-box animation">
-            <input type="text" required>
-            <label>Username</label>
-            <i class="bx bxs-user"></i>
+            <input type="text" required />
+            <label>Email Address</label>
+            <i class="bx bxs-envelope"></i>
           </div>
           <div class="input-box animation">
-            <input type="password" required>
+            <input type="password" required />
             <label>Password</label>
-            <i class="bx bxs-lock-alt"></i> 
+            <i class="bx bxs-lock-alt"></i>
           </div>
           <div class="remember-forgot animation">
             <a href="#">Forgot Password ?</a>
           </div>
           <div class="input-box animation">
-              <button type="submit" class="btn"><a href="./Dashboard/Dashbord.html">Login</a></button>
+            <button type="submit" class="btn">
+              <a href="./Dashboard/Dashbord.html">Login</a>
+            </button>
           </div>
           <div class="regi-link animation">
-            <p>Don't have an account? <a href="#" class="SignUpLink">Sign Up</a></p>
+            <p>
+              Don't have an account? <a href="#" class="SignUpLink">Sign Up</a>
+            </p>
           </div>
         </form>
-      </div> 
+      </div>
       <div class="info-content Login">
         <h2 class="animation">WELCOME BACK!</h2>
-        <p class="animation">To keep connected with us please login with your personal info</p>
+        <p class="animation">
+          To keep connected with us please login with your personal info
+        </p>
       </div>
       <div class="form-box Register">
-        <img class="animation" src="./Photo/undraw_undraw_undraw_undraw_sign_up_ln1s_-1-_s4bc_-1-_ee41_-1-_kf4d.svg" alt="" height="100">
+        <img
+          class="animation"
+          src="./Photo/undraw_undraw_undraw_undraw_sign_up_ln1s_-1-_s4bc_-1-_ee41_-1-_kf4d.svg"
+          alt=""
+          height="90"
+        />
         <h2 class="animation">SignUp</h2>
         <form action="#">
           <div class="input-box animation">
-            <input type="text" required>
-            <label>Email Address</label>
+            <input type="text" required />
+            <label>User Name</label>
             <i class="bx bxs-user"></i>
           </div>
           <div class="input-box animation">
-            <input type="password" required>
+            <input type="text" required />
+            <label>Email Address</label>
+            <i class="bx bxs-envelope"></i>
+          </div>
+          <div class="input-box animation">
+            <input type="password" required />
             <label>Password</label>
-            <i class="bx bxs-lock-alt"></i> 
+            <i class="bx bxs-lock-alt"></i>
           </div>
           <div class="input-box animation">
             <button type="submit" class="btn">
-              <a href="./Dashboard/Dashbord.html">Register </a></button>
+              <a href="./Dashboard/Dashbord.html">Register </a>
+            </button>
           </div>
           <div class="regi-link animation">
-            <p>Already have an account? <a href="#" class="SignInLink">Sign In</a></p>
+            <p>
+              Already have an account?
+              <a href="#" class="SignInLink">Sign In</a>
+            </p>
           </div>
         </form>
-      </div> 
+      </div>
       <div class="info-content Register">
         <h2 class="animation">WELCOME BACK!</h2>
-        <p class="animation">To keep connected with us please login with your personal info</p>
+        <p class="animation">
+          To keep connected with us please login with your personal info
+        </p>
       </div>
-  </div>
+    </div>
   </body>
 </html>
